--- a/app/index.html
+++ b/app/index.html
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="mobile-web-app-capable" content="yes">
 
-  <meta name="apple-mobile-web-app-title" content="basisregistratie-wonen">
+  <meta name="apple-mobile-web-app-title" content="registraties">
 
   <link rel="icon" href="/favicon.png" />
-  <title>Ontsluiten Basisregistraties voor Wonen</title>
+  <title>Registraties</title>
 
   <!-- Matomo -->
   <script type="text/javascript">
