(Fix) IE11 issues This PR fixes the following issues in IE11: - `<picture>` element not supported (included picturefill polyfill) - `onBlur` event not having `relatedTarget` property; switched for `focusOut` event which does have that attribute - SVG elements gaining focus on tabbing through the UI

--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,10 @@
     })();
   </script>
   <!-- End Matomo Code -->
+
+  <!--[if gt IE 10]><!-->
+  <script src="//cdnjs.cloudflare.com/ajax/libs/picturefill/3.0.3/picturefill.min.js" integrity="sha256-iT+n/otuaeKCgxnASny7bxKeqCDbaV1M7VdX1ZRQtqg=" crossorigin="anonymous" async></script>
+  <!--[if gt IE 8]><!-->
 </head>
 
 <body class="with-sidebars">
